--- a/SSuKSSuK-UI/src/main/resources/static/assets/css/main.css
+++ b/SSuKSSuK-UI/src/main/resources/static/assets/css/main.css
@@ -3442,7 +3442,7 @@ input, select, textarea {
 	}
 
 	body.landing #header {
-		background: transparent;
+		/*background: transparent;*/
 		box-shadow: none;
 		position: absolute;
 	}
@@ -4109,3 +4109,137 @@ input, select, textarea {
 					}
 
 	}
+
+
+.weather-container {
+	width: auto;
+	height: 100%;
+	background-color: #000000;
+	display: flex;
+	flex-direction: column;
+}
+
+.location {
+	width: 100%;
+	height: 50px;
+	background-color: #ffffff;
+	display: flex;
+	flex-direction: row;
+	padding: 3px 3px 3px 3px;
+}
+
+.location h1 {
+	/*font-size: 36px;*/
+	/*color: #000000;*/
+	/*font-weight: bold;*/
+
+	position: relative;
+	display: inline-block;
+	/*overflow: hidden;*/
+	padding: 0;
+	font-size: 1.8rem;
+	font-weight: 600;
+	/*line-height: 2.4rem;*/
+	letter-spacing: -0.3px;
+	color: #000;
+	/*color: rgba(var(--gray0), 1);*/
+	vertical-align: middle;
+}
+
+.location p {
+	font-size: 16px;
+}
+
+.weather-info {
+	width: 100%;
+	height: 200px;
+	background-color: #000000;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.weather-info div {
+	width: 25%;
+}
+
+.weather-info h2 {
+	font-size: 36px;
+	font-weight: bold;
+}
+
+.weather-info p {
+	font-size: 16px;
+}
+
+.weather-icon {
+	width: 100%;
+	height: 200px;
+	background-color: #000000;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.weather-icon i {
+	font-size: 100px;
+}
+
+.weather-detail {
+	width: 100%;
+	height: 600px;
+	background-color: #000000;
+	display: flex;
+	flex-direction: column;
+}
+
+.weather-detail table {
+	width: 100%;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.weather-detail table th,
+.weather-detail table td {
+	padding: 10px 20px;
+	border: 1px solid #cccccc;
+}
+
+.weather-detail table th {
+	background-color: #eeeeee;
+}
+.weather-detail table tr:nth-child(even) {
+	background-color: #f5f5f5;
+}
+
+.weather-detail i {
+	font-size: 24px;
+}
+
+@media (max-width: 768px) {
+	.weather-container {
+		flex-direction: column-reverse;
+	}
+
+	.location {
+		width: 100%;
+		height: 100px;
+	}
+
+	.weather-info {
+		width: 100%;
+		height: 200px;
+	}
+
+	.weather-icon {
+		width: 100%;
+		height: 200px;
+	}
+
+	.weather-detail {
+		width: 100%;
+		height: 100%;
+	}
+}
